# MarineHeatWaves_xarray

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  marineheatwaves_xr.py  pyproject.toml
examples/: advanced_example.py  basic_example.py  performance_demo.py
marineheatwaves_xarray/: __init__.py  core.py  utils.py
tests/: test_basic.py
