[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marineheatwaves-xarray"
version = "0.1.0"
description = "Optimized functions for Marine Heat Wave calculations with multi-dimensional datasets using xarray and dask"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chaehyeong Lee"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["marine", "heatwaves", "oceanography", "climate", "xarray", "dask"]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "xarray>=0.20.0",
    "dask[array]>=2021.6.0",
    "pandas>=1.3.0",
    "netcdf4>=1.5.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/ChaehyeongLee/MarineHeatWaves_xarray"
Repository = "https://github.com/ChaehyeongLee/MarineHeatWaves_xarray"
Issues = "https://github.com/ChaehyeongLee/MarineHeatWaves_xarray/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["marineheatwaves_xarray*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true